--- a/.i3/i3blocks.conf
+++ b/.i3/i3blocks.conf
@@ -33,27 +33,28 @@ markup=none
 # The first parameter sets the step (and units to display)
 # The second parameter overrides the mixer selection
 # See the script for details.
-[volume]
-label=VOL
+#[volume]
+#label=VOL
 #label=♪
-instance=Master
+#instance=Master
 #instance=PCM
-interval=once
-signal=10
+#interval=1
+#signal=10
+#command=/usr/lib/i3blocks/volume 5 pulse
 
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
-[memory]
-label=MEM
-separator=false
-interval=30
+#[memory]
+#label=MEM
+#separator=false
+#interval=30
 
-[memory]
-label=SWAP
-instance=swap
-separator=false
-interval=30
+#[memory]
+#label=SWAP
+#instance=swap
+#separator=false
+#interval=30
 
 # Disk usage
 #
@@ -61,7 +62,7 @@ interval=30
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
 [disk]
-label=HOME
+label=
 #instance=/mnt/data
 interval=30
 
@@ -73,7 +74,7 @@ interval=30
 #instance=wlan0
 color=#00FF00
 interval=10
-separator=false
+#separator=false
 
 [wifi]
 #instance=wlp3s0
@@ -82,7 +83,7 @@ separator=false
 
 [bandwidth]
 #instance=eth0
-interval=5
+#interval=5
 
 # CPU usage
 #
@@ -94,8 +95,9 @@ interval=10
 min_width=CPU: 100.00%
 #separator=false
 
-#[load_average]
-#interval=10
+[load_average]
+label=
+interval=1
 
 # Battery indicator
 #
@@ -109,8 +111,9 @@ interval=30
 # Date Time
 #
 [time]
+label=
 command=date '+%Y-%m-%d %H:%M:%S'
-interval=5
+interval=1
 
 # Generic media player support
 #
@@ -151,3 +154,4 @@ interval=5
 #instance=NUM
 #interval=once
 #signal=11
+#
