--- a/.i3/i3blocks.conf
+++ b/.i3/i3blocks.conf
@@ -28,27 +28,41 @@ command=/usr/lib/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
+# Battery indicator
+#
+# The battery instance defaults to 0.
+[battery]
+label=⚡ (0)
+interval=30
+
+[battery]
+label=⚡ (1)
+instance=1
+interval=30
+separator_block_width=50
+
 # Volume indicator
 #
 # The first parameter sets the step (and units to display)
 # The second parameter overrides the mixer selection
 # See the script for details.
-#[volume]
-#label=VOL
+[volume]
+label=VOL
+color=#42b9f4
 #label=♪
 #instance=Master
 #instance=PCM
-#interval=1
+interval=1
 #signal=10
 #command=/usr/lib/i3blocks/volume 5 pulse
 
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
-#[memory]
-#label=MEM
+[memory]
+label=MEM
 #separator=false
-#interval=30
+interval=30
 
 #[memory]
 #label=SWAP
@@ -66,22 +80,26 @@ label=
 #instance=/mnt/data
 interval=30
 
+[load_average]
+label=
+interval=1
+
 # Network interface monitoring
 #
 # If the instance is not specified, use the interface used for default route.
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
+[wifi]
+label=
+instance=wlp4s0
+interval=10
+
 [iface]
 #instance=wlan0
-color=#00FF00
+color=#999999
 interval=10
-#separator=false
+separator_block_width=50
 
-[wifi]
-#instance=wlp3s0
-interval=10
-separator=false
-
-[bandwidth]
+#[bandwidth]
 #instance=eth0
 #interval=5
 
@@ -89,24 +107,18 @@ separator=false
 #
 # The script may be called with -w and -c switches to specify thresholds,
 # see the script for details.
-[cpu_usage]
-label=CPU
-interval=10
-min_width=CPU: 100.00%
+#[cpu_usage]
+#label=CPU
+#interval=10
+#min_width=CPU: 100.00%
 #separator=false
 
-[load_average]
-label=
-interval=1
-
-# Battery indicator
+# OpenVPN support
 #
-# The battery instance defaults to 0.
-[battery]
-label=BAT
-#label=⚡
-#instance=1
-interval=30
+# Support multiple VPN, with colors.
+#[openvpn]
+#interval=20
+#separator_block_width=50
 
 # Date Time
 #
@@ -114,6 +126,7 @@ interval=30
 label=
 command=date '+%Y-%m-%d %H:%M:%S'
 interval=1
+color=#f4b342
 
 # Generic media player support
 #
@@ -123,12 +136,6 @@ interval=1
 #instance=spotify
 #interval=5
 #signal=10
-
-# OpenVPN support
-#
-# Support multiple VPN, with colors.
-#[openvpn]
-#interval=20
 
 # Temperature
 #
