--- a/.config/i3/config
+++ b/.config/i3/config
@@ -36,7 +36,7 @@ bindsym $mod+Return exec urxvt
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run -nb '#EDDDBE' -nf black -sb '#6aa84f'
+bindsym $mod+d exec dmenu_run -nb '#f4b342' -nf black -sb '#333333'
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -92,33 +92,89 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
-set $workspace1 "1: Terminals "
-set $workspace2 "2: Chrome "
+set $workspace1 "1: Hipchat"
+set $workspace2 "2"
+set $workspace3 "3"
+set $workspace4 "4"
+set $workspace5 "5"
+set $workspace6 "6"
+set $workspace7 "7"
+set $workspace8 "8"
+set $workspace9 "9"
 set $workspace10 "10: Pavucontrol "
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
 bindsym $mod+2 workspace $workspace2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
+bindsym $mod+3 workspace $workspace3
+bindsym $mod+4 workspace $workspace4
+bindsym $mod+5 workspace $workspace5
+bindsym $mod+6 workspace $workspace6
+bindsym $mod+7 workspace $workspace7
+bindsym $mod+8 workspace $workspace8
+bindsym $mod+9 workspace $workspace9
 bindsym $mod+0 workspace $workspace10
+
+# switch to workspace with numpad (numlock active)
+bindsym $mod+Mod2+KP_1 workspace $workspace1
+bindsym $mod+Mod2+KP_2 workspace $workspace2
+bindsym $mod+Mod2+KP_3 workspace $workspace3
+bindsym $mod+Mod2+KP_4 workspace $workspace4
+bindsym $mod+Mod2+KP_5 workspace $workspace5
+bindsym $mod+Mod2+KP_6 workspace $workspace6
+bindsym $mod+Mod2+KP_7 workspace $workspace7
+bindsym $mod+Mod2+KP_8 workspace $workspace8
+bindsym $mod+Mod2+KP_9 workspace $workspace9
+bindsym $mod+Mod2+KP_0 workspace $workspace10
+
+# switch to workspace with numpad (numlock inactive)
+bindcode $mod+87 workspace $workspace1
+bindcode $mod+88 workspace $workspace2
+bindcode $mod+89 workspace $workspace3
+bindcode $mod+83 workspace $workspace4
+bindcode $mod+84 workspace $workspace5
+bindcode $mod+85 workspace $workspace6
+bindcode $mod+79 workspace $workspace7
+bindcode $mod+80 workspace $workspace8
+bindcode $mod+81 workspace $workspace9
+bindcode $mod+90 workspace $workspace10
+
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $workspace1
 bindsym $mod+Shift+2 move container to workspace $workspace2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+3 move container to workspace $workspace3
+bindsym $mod+Shift+4 move container to workspace $workspace4
+bindsym $mod+Shift+5 move container to workspace $workspace5
+bindsym $mod+Shift+6 move container to workspace $workspace6
+bindsym $mod+Shift+7 move container to workspace $workspace7
+bindsym $mod+Shift+8 move container to workspace $workspace8
+bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
+
+# move focused container to workspace with numpad (numlock active)
+bindsym $mod+Shift+Mod2+KP_End move container to workspace $workspace1
+bindsym $mod+Shift+Mod2+KP_Down move container to workspace $workspace2
+bindsym $mod+Shift+Mod2+KP_Next move container to workspace $workspace3
+bindsym $mod+Shift+Mod2+KP_Left move container to workspace $workspace4
+bindsym $mod+Shift+Mod2+KP_Begin move container to workspace $workspace5
+bindsym $mod+Shift+Mod2+KP_Right move container to workspace $workspace6
+bindsym $mod+Shift+Mod2+KP_Home move container to workspace $workspace7
+bindsym $mod+Shift+Mod2+KP_Up move container to workspace $workspace8
+bindsym $mod+Shift+Mod2+KP_Prior move container to workspace $workspace9
+bindsym $mod+Shift+Mod2+KP_Insert move container to workspace $workspace10
+
+# move focused container to workspace with numpad (numlock inactive)
+bindcode $mod+Shift+87 move container to workspace $workspace1
+bindcode $mod+Shift+88 move container to workspace $workspace2
+bindcode $mod+Shift+89 move container to workspace $workspace3
+bindcode $mod+Shift+83 move container to workspace $workspace4
+bindcode $mod+Shift+84 move container to workspace $workspace5
+bindcode $mod+Shift+85 move container to workspace $workspace6
+bindcode $mod+Shift+79 move container to workspace $workspace7
+bindcode $mod+Shift+80 move container to workspace $workspace8
+bindcode $mod+Shift+81 move container to workspace $workspace9
+bindcode $mod+Shift+90 move container to workspace $workspace10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -171,25 +227,43 @@ hide_edge_borders both
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+	colors {
+		focused_workspace  #f4b342 #c4871d #ffffff
+	}
+
         status_command i3blocks -c ~/.i3/i3blocks.conf
 }
 
-bindsym $mod+Shift+x exec i3lock --color '#EDDDBE' -i /home/matti/lock.png
+bindsym $mod+Shift+x exec i3lock --color '#333333'
 
 bindsym --release $mod+Shift+p exec scrot ~/screenshots/%Y-%m-%d-%T-screenshot.png -s -q 100
 
+# Screen brightness controls
+bindsym XF86MonBrightnessUp exec xbacklight -inc 10 
+bindsym XF86MonBrightnessDown exec xbacklight -dec 10
+
+# Pulse Audio controls
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
+
+# Set wallpaper
 exec_always feh --bg-scale /home/matti/arch_wallpaper.jpg
 
-#Set the keyboard layout
+# Set the keyboard layout
 exec setxkbmap se
 
 #Assign applications to workspaces
-assign [class="URxvt"] $workspace1
-assign [class="Google-chrome"] $workspace2
+assign [class="HipChat"] $workspace1
+#assign [class="URxvt"] $workspace2
+#assign [class="Chromium"] $workspace3
+assign [class="Arandr"] $workspace9
 assign [class="Pavucontrol"] $workspace10
 
 #Autostart applications
 exec i3-sensible-terminal
 exec i3-sensible-terminal
-exec google-chrome-stable
+exec chromium
 exec pavucontrol
+exec arandr
+exec hipchat4
